# memtester-gui

memtester-gui/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  mainwindow.cpp  mainwindow.h  testworker.cpp  testworker.h
memtester-gui/debian/: build-deb.sh  changelog  control  copyright  memtester-gui.desktop  rules
